<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="app_name">预习小助手</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="phone">请输入您的电话号码</string>
    <string name="password">请输入您的密码</string>
    <string name="password_again">请再次输入您的密码</string>
    <string name="use_third_account">第三方账号登录</string>
    <string name="create_infm_account">创建账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="no_install_wechat">未安装微信</string>
    <string name="no_install_qq">未安装QQ</string>
    <string name="tip_loging">登录中...</string>
    <string name="tip_begin_oauth">开始授权...</string>
    <string name="tip_login_fail">登录失败</string>
    <string name="oauth_fail">授权失败</string>
    <string name="oauth_cancle">授权取消</string>
    <string name="tip_phone_regex_not_right">手机号码格式不正确</string>
    <string name="tip_account_empty">请输入您的邮箱地址</string>
    <string name="tip_account_regex_not_right">手机号格式不正确</string>
    <string name="tip_password_can_not_be_empty">密码不能为空</string>
    <string name="tip_password_verifity">两次输入的密码不一致！</string>
    <string name="xiaowu">IT_xiao小巫</string>
    <string name="user_rule">用户协议</string>
    <string name="create_account">创建账号</string>
    <string name="create_class">创建班级</string>
    <string name="create_class_name_hint">请输入班级名称</string>
    <string name="create_class_info_hint">请输入30字以内介绍</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="send_encrypted">获取问题</string>
    <string name="count_down">%ss</string>
    <string name="tip_please_input_phone">请输入手机号码</string>
    <string name="tip_phone_can_not_be_empty">手机号码不能为空</string>
    <string name="tip_name_can_not_be_empty">用户名不能为空</string>
    <string name="tip_problem_can_not_be_empty">密保问题不能为空</string>
    <string name="tip_answer_can_not_be_empty">密保答案不能为空</string>
    <string name="tip_please_input_code">请输入验证码</string>
    <string name="tip_input_code_is_false">验证码错误</string>
    <string name="tip_please_input_6_32_password">请输入6-32位的密码</string>
    <string name="reset_pwd">重置密码</string>
    <string name="sign_up_failed">用户名已存在</string>
    <string name="sign_up_successfully">注册成功,请验证邮箱后登录！</string>
    <string name="username">用户名</string>
    <string name="verification_code">验证码</string>
    <string name="problem">密保问题</string>
    <string name="answer">密保答案</string>
    <string name="problem_hint">密保问题（可选）</string>
    <string name="answer_hint">密保答案（可选）</string>
    <string name="cannot_login">用户名或密码不正确</string>
    <string name="please_edit">请输入</string>

    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>

    <string name="logup">退出登录</string>
    <string name="context_menu">Context menu</string>

    <string name="search_hint">请输入搜索关键词</string>

    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">提交试卷？</string>
    <string name="submit_confirm_button">确定</string>
</resources>
