<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uview="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool_bar"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <com.liangjie.yuxixiaozhushou.CleanEditText
        android:id="@+id/et_username"
        style="@style/login_edit_style"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tool_bar"
        android:maxLength="32"
        android:singleLine="true"
        android:hint="@string/username"
        android:inputType="text" >
        <requestFocus />
    </com.liangjie.yuxixiaozhushou.CleanEditText>
    <RelativeLayout
        android:id="@+id/layout_verifiCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="0.5dp"
        android:background="@android:color/white">

        <com.liangjie.yuxixiaozhushou.CleanEditText
            android:id="@+id/et_verifiCode"
            style="@style/login_edit_style"
            android:layout_marginTop="0.5dp"
            android:ems="10"
            android:hint="@string/verification_code"
            android:layout_toLeftOf="@+id/btn_send_verifi_code"
            android:maxLength="11"
            android:inputType="number" />

        <com.liangjie.yuxixiaozhushou.utils.VerifyCode
            android:id="@+id/btn_send_verifi_code"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            uview:codeLength="4"
            uview:codeBackground="#ffffff"
            uview:codeTextSize="16sp"
            uview:isContainChar="false"
            uview:linNum="100"
            uview:pointNum="3"
            />
    </RelativeLayout>
    <com.liangjie.yuxixiaozhushou.CleanEditText
        android:id="@+id/et_password"
        style="@style/login_edit_style"
        android:layout_below="@+id/layout_verifiCode"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <com.liangjie.yuxixiaozhushou.CleanEditText
        android:id="@+id/et_password_again"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="0.5dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword" />
    <com.liangjie.yuxixiaozhushou.CleanEditText
        android:id="@+id/et_email"
        style="@style/login_edit_style"
        android:layout_below="@+id/et_password_again"
        android:layout_marginTop="0.5dp"
        android:hint="@string/tip_account_empty"
        android:maxLength="32"
        android:singleLine="true"
        android:inputType="textEmailAddress" />
    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/create_account"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_create_account"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击“创建账号”即同意" />
        <TextView
            android:id="@+id/tv_user_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/user_rule"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>