<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <com.liangjie.yuxixiaozhushou.CleanEditText
            android:id="@+id/et_name"
            style="@style/login_edit_style"
            android:hint="@string/tip_name_can_not_be_empty"
            android:inputType="text"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#f8f8f8" />

        <com.liangjie.yuxixiaozhushou.CleanEditText
            android:id="@+id/et_password"
            style="@style/login_edit_style"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="#5c5c5c"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@+id/seprate"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/create_infm_account"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />

        <View
            android:id="@+id/seprate"
            android:layout_width="0.5dp"
            android:layout_height="15dp"
            android:layout_centerInParent="true"
            android:background="#5c5c5c" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/seprate"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/forget_password"
            android:textColor="#5c5c5c"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>