<?xml version="1.0" encoding="utf-8"?>
    <!--fragment_create_new_room.xml-->
<!--与activity_stu_info同-->
<LinearLayout
    android:orientation="vertical"
    android:background="@color/color_ffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_marginTop="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
<FrameLayout
    android:layout_gravity="center_horizontal"
    android:id="@id/avatar_layout"
    android:background="@drawable/icon_add_avater_bg"
    android:layout_width="@dimen/create_room_avater_bg_side"
    android:layout_height="@dimen/create_room_avater_bg_side"
    android:layout_marginTop="20.0dip">
    <TextView
        android:textColor="#ffc5cfd6"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加头像" />
    <ImageView
        android:textSize="@dimen/font_42"
        android:id="@+id/class_icon"
        android:background="@drawable/icon_create_room_avater_bg"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    <ImageView
        android:background="@drawable/icon_create_room_avater_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
</FrameLayout>
<com.liangjie.yuxixiaozhushou.CleanEditText
    android:id="@+id/et_class_name"
    style="@style/login_edit_style"
    android:layout_below="@+id/class_icon"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:layout_marginTop="0.5dp"
    android:singleLine="true"
    android:hint="@string/create_class_name_hint"
    android:inputType="text" />
<com.liangjie.yuxixiaozhushou.CleanEditText
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:id="@+id/et_class_info"
    style="@style/login_edit_style"
    android:layout_below="@+id/et_class_name"
    android:layout_marginTop="0.5dp"
    android:hint="@string/create_class_info_hint"
    android:inputType="text" />
<!--<EditText android:textSize="@dimen/font_45" android:textColorHint="#ffc5cfd6" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/name" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginBottom="20.0dip" android:hint="点此处起个名字" android:maxLength="10" />-->
<!--<EditText android:textSize="15.0sp" android:textColorHint="#ffc5cfd6" android:gravity="center_vertical" android:id="@id/introdution" android:background="@drawable/gray_radius_bg" android:paddingLeft="@dimen/create_room_indroduction_left" android:layout_width="fill_parent" android:layout_height="@dimen/create_room_indroduction_h" android:layout_marginTop="10.0dip" android:hint="请输入30字以内简介" android:maxLength="30" />-->
<Button
    android:layout_marginLeft="20.0dip"
    android:layout_marginRight="20.0dip"
    android:textSize="@dimen/font_42"
    android:textColor="@color/color_ffffff"
    android:id="@+id/btn_commit"
    android:onClick="onClick"
    android:background="@drawable/selector_send_reply_btn"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/create_room_confirm"
    android:layout_marginTop="10.0dip"
    android:text="@string/create_class" />
<TextView
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:textSize="@dimen/font_42"
    android:textColor="#b3000000"
    android:id="@+id/create_room_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10.0dip"
    android:text="注：班级名称创建后不可更改"
    android:layout_below="@id/btn_commit" />
</LinearLayout>
    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:orientation="vertical" android:layout_width="match_parent"-->
<!--android:layout_height="match_parent">-->
<!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="#f8f8f8"-->
        <!--android:orientation="vertical">-->
        <!--<ImageView-->
            <!--android:id="@+id/class_icon"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:scaleType="centerInside"-->
            <!--android:background="@drawable/texture" />-->
        <!--<com.liangjie.yuxixiaozhushou.CleanEditText-->
            <!--android:id="@+id/et_class_name"-->
            <!--style="@style/login_edit_style"-->
            <!--android:layout_below="@+id/class_icon"-->
            <!--android:layout_marginTop="0.5dp"-->
            <!--android:singleLine="true"-->
            <!--android:hint="@string/create_class_name_hint"-->
            <!--android:inputType="text" />-->
        <!--<com.liangjie.yuxixiaozhushou.CleanEditText-->
            <!--android:id="@+id/et_class_info"-->
            <!--style="@style/login_edit_style"-->
            <!--android:layout_below="@+id/et_class_name"-->
            <!--android:layout_marginTop="0.5dp"-->
            <!--android:hint="@string/create_class_info_hint"-->
            <!--android:inputType="text" />-->
        <!--<Button-->
            <!--android:id="@+id/btn_commit"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/et_class_info"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:background="@drawable/btn_login_selector"-->
            <!--android:onClick="onClick"-->
            <!--android:text="@string/create_class"-->
            <!--android:textColor="#5c5c5c"-->
            <!--android:textSize="16sp" />-->
    <!--</RelativeLayout>-->
<!--</ScrollView>-->
<!--</LinearLayout>-->